# Solution-to-GAMES101

Assignment1/: CMakeLists.txt  Triangle.hpp  main.cpp
Homework0/: CMakeLists.txt  main.cpp
Homework1/: main.cpp  rasterizer.hpp
Homework2/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Homework3/: CLAUDE.md  CMakeLists.txt  OBJ_Loader.h  Shader.hpp  Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Homework4/: CMakeLists.txt  main.cpp
Homework5/: Renderer.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp
